# flag-it

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.claude/: settings.local.json.tmp.2720853.f5169f974b71
.github/workflows/: ci.yml
cmd/server/: main.go
docs/: ROADMAP.md  openapi.yaml
internal/analytics/: recorder.go
internal/audit/: audit.go
internal/auth/: auth.go
internal/authz/: authz.go  authz_integration_test.go  members.go
internal/catalog/: catalog.go  sdkcache.go  sdkcache_test.go
internal/contexts/: recorder.go
migrations/: 00001_extensions.sql  00001_init.sql  00002_identity.sql  00003_projects_environments.sql  00004_authz.sql  00005_flags.sql  00006_authz_v2.sql  00007_targeting.sql  00008_segments.sql  00009_prerequisites.sql  00010_client_side.sql  00011_audit_log.sql  00012_eval_stats.sql  00013_contexts.sql  00014_change_requests.sql  00015_scheduled_changes.sql  00016_flag_temporary.sql  00017_flag_triggers.sql  00018_webhooks.sql  embed.go
sdk/: README.md  tsconfig.json
sdk/go/: go.mod  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: account_targeting.py  cached_client.py  per_call.py
sdk/python/flagit/: __init__.py  cached.py  client.py
web/: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  README.md  components.json  compose.yaml  config.example.json  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.e2e.json  tsconfig.json  tsconfig.node.json  vite.config.ts
(+407 files in other folders)
